# kuukan

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
examples/: CMakeLists.txt  minimal_function_space.cpp
include/kuukan/: kuukan.hpp  version.hpp
include/kuukan/concepts/: core_concepts.hpp
include/kuukan/metric/: metric_space.hpp
include/kuukan/norm/: normed_space.hpp
include/kuukan/vector/: vector_space.hpp
